## Add source directories
add_subdirectory(common)
add_subdirectory(logging)
add_subdirectory(control)
add_subdirectory(decision)
add_subdirectory(planning)
add_subdirectory(datalink)
add_subdirectory(utilities)
add_subdirectory(cvdraw)
add_subdirectory(drive)

# to be deprecated
add_subdirectory(legacy)
