## Add source directories
add_subdirectory(adtypes)
add_subdirectory(drive)
add_subdirectory(logging)
add_subdirectory(control)
add_subdirectory(decision)
add_subdirectory(planning)
add_subdirectory(datalink)
add_subdirectory(utilities)
add_subdirectory(cvdraw)
add_subdirectory(viewer)

# to be deprecated
add_subdirectory(legacy)
